src/components/home/home.scss
.home-app {
  display: grid;
  background: var(--defaulttertiary);
  overflow: auto;
  min-height: 100%;


  .crystal-accordion {
    background: var(--defaultprimary);
    margin: 10px;
    box-shadow: 0 0 3px 1px #1c1b26;
    transition: 0.4s;
  }

  .crystal-accordion-header {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding-right: 30px;

    .group-1 {
      display: flex;
      align-items: first baseline;
      min-width: 20%;
      >* {
        margin-right: 20px;
      }
    }

    p {
      margin: 1em .5em;
    }

    .button-set {
      display: flex;
      >* {
        margin-left: 10px;
      }
    }

    &:hover {
      color: var(--secondarytext);
    }

    >* {
      margin-left: 30px;
    }

    &.open {
      color: var(--secondarytext);
      border-bottom: 1px solid var(--defaultborder);
    }
  }

  .crystal-accordion-body {
    height: 0;
    overflow: hidden;
    transition: height 0.2s ease-out;

    .data-item {
      font-size: 12px;
      display: flex;
      justify-content: space-between;
    }

    .top-bar {
      font-size: 11px;
      height: auto;
      margin-bottom: 10px;
      padding-left: 0;

      button {
        padding: 15px 20px 5px;
      }
    }

    .part-1 {
      min-width: 60%;
      padding-left: 30px;

      .data-item {
        >p {
          margin-bottom: 0;
        }
      }
    }

    .part-2 {
      width: 33%;
      margin: 10px;

    }

    &.open {
      display: flex;
      height: 400px;
    }
  }

  .search-bar {
    display: flex;
    justify-content: space-evenly;
  }

  .accordion {
    background: var(--defaultprimary);
  }

  .molecule-card-row {
    width: 100%;
    min-height: 300px;
    padding: 30px 50px;
    display: flex;
    justify-content: center;
  }

  .molecule-card {
    min-height: 100%;
    border-radius: 10px;
    background: var(--defaultprimary);
    box-shadow: 0 0 3px 2px var(--defaultshadow);
    min-width: 20%;
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 10px;
    &:hover {
      box-shadow: 0 0 3px 3px var(--defaultshadow);
    }
  }

  .top-bar {
    width: 100%;
    height: 75px;
    display: flex;
    padding-left: 50px;

    button {
      outline: none;
      border: none;
      color: var(--defaulttext);
      border-bottom: 2px solid transparent;
      background: transparent;
      padding: 30px 30px 10px;

      &:hover {
        border-bottom: 2px solid var(--defaultborder);
      }

      &.active {
        border-bottom: 2px solid var(--bs-blue);
      }
    }
  }

  &.hidden {
    display: none;
  }
}

